Migrate to Java 16 / Gradle 7 rc.2